2015-01-14  Arnold D. Robbins <arnold@skeeve.com>

	* texindex/jrtangle: Fixes to allow non-use of default update recipe.
	* texindex/ti.twjr: Clear the update recipe, don't use a suffix.
	Should let things build in MinGW environment. Thanks to Eli Z
	for pointing out the issue.
	
2015-01-11  Karl Berry  <karl@gnu.org>

	* man/Makefile.am (texindex.1): source file is now texindex/ti.twjr.
	* README: mention gawk >= 4.0 if modifying ti.twjr.	

2015-01-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@url PDF Output Format, PDF Colors)
	(Escaping to HTML): Change some "."'s to "@."'s.

2015-01-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Ending a Sentence): attempt to clarify
	the interaction of closing punctuation and sentence endings.

2015-01-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Invoking texi2any) <--split>: Change a "." 
	to a "@.".

2015-01-07  Karl Berry  <karl@gnu.org>

	* texindex/Makefile.am (ti.pdf, ti.html): new targets,
	for the literate program.  (Only invoked by hand.)

	* tp/texi2any.pl: hardwire program name in --version,
	derive name from $0 in --help, to match behavior of coding
	standards and coreutils, etc.

2015-01-05  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_CONFIG_FILES): add texindex/Makefile.
	* Makefile.am (SUBDIRS): add texindex.
	(po-check): also look at *.twjr.
	* util/Makefile.am (bin_PROGRAMS): remove, we'll no longer build
	the C texindex.

	* texindex/ti.twjr: --help formatting.
	
2015-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (point_forward_char, point_backward_char): 
	Correctly traverse multi-column characters.  (Bug was likely 
	introduced on 2014-10-09 with change to window_point_to_column.)

2015-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text, calculate_line_starts): 
	process_node_text inlined in calculate_line_starts.

	(calculate_line_starts): Simplify.