@@ -1,7 +1,7 @@
 # $Id$
 # Makefile.am for texinfo/install-info/tests.
 #
-# Copyright 2008, 2009, 2010, 2013, 2014 Free Software Foundation, Inc.
+# Copyright 2008, 2009, 2010, 2013, 2014, 2015 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
@@ -26,230 +26,230 @@ ii-0056-test ii-0057-test
 
 noinst_SCRIPTS=$(TESTS)
 
-EXTRA_DIST=\
+EXTRA_DIST= $(TESTS) \
 ii-0001-input-dir-file \
 ii-0001-input-info-file \
 ii-0001-expected-dir-file \
-ii-0001-test \
+\
 ii-0002-input-dir-file \
 ii-0002-input-info-file \
 ii-0002-expected-dir-file \
-ii-0002-test \
+\
 ii-0003-input-dir-file \
 ii-0003-input-info-file \
 ii-0003-expected-dir-file \
-ii-0003-test \
+\
 ii-0004-input-dir-file \
 ii-0004-input-info-file \
 ii-0004-expected-dir-file \
-ii-0004-test \
+\
 ii-0005-input-dir-file \
 ii-0005-input-info-file \
 ii-0005-expected-dir-file \
-ii-0005-test \
+\
 ii-0006-input-dir-file \
 ii-0006-input-info-file \
 ii-0006-expected-dir-file \
-ii-0006-test \
+\
 ii-0007-input-dir-file \
 ii-0007-input-info-file \
 ii-0007-expected-dir-file \
-ii-0007-test \
+\
 ii-0008-input-dir-file \
 ii-0008-input-info-file \
 ii-0008-expected-dir-file \
-ii-0008-test \
+\
 ii-0009-input-dir-file \
 ii-0009-input-info-file \
 ii-0009-expected-dir-file \
-ii-0009-test \
+\
 ii-0010-input-dir-file \
 ii-0010-input-info-file \
 ii-0010-expected-dir-file \
-ii-0010-test \
+\
 ii-0011-input-dir-file \
 ii-0011-input-info-file \
 ii-0011-expected-dir-file \
-ii-0011-test \
+\
 ii-0012-input-dir-file \
 ii-0012-input-info-file \
 ii-0012-expected-dir-file \
-ii-0012-test \
+\
 ii-0013-input-dir-file \
 ii-0013-input-info-file \
 ii-0013-expected-dir-file \
-ii-0013-test \
+\
 ii-0014-input-dir-file \
 ii-0014-input-info-file \
 ii-0014-expected-dir-file \
-ii-0014-test \
+\
 ii-0015-input-dir-file \
 ii-0015-input-info-file \
 ii-0015-expected-dir-file \
-ii-0015-test \
+\
 ii-0016-input-dir-file \
 ii-0016-input-info-file \
 ii-0016-expected-dir-file \
-ii-0016-test \
+\
 ii-0017-input-dir-file \
 ii-0017-input-info-file \
 ii-0017-expected-dir-file \
-ii-0017-test \
+\
 ii-0018-input-dir-file \
 ii-0018-input-info-file \
-ii-0018-test \
+\
 ii-0019-input-dir-file \
 ii-0019-input-info-file \
-ii-0019-test \
+\
 ii-0020-input-dir-file \
 ii-0020-input-info-file \
 ii-0020-expected-dir-file \
-ii-0020-test \
+\
 ii-0021-input-dir-file \
 ii-0021-input-info-file \
 ii-0021-expected-dir-file \
-ii-0021-test \
+\
 ii-0022-input-dir-file \
 ii-0022-input-info-file \
 ii-0022-expected-dir-file \
-ii-0022-test \
+\
 ii-0023-input-dir-file \
 ii-0023-input-info-file \
 ii-0023-expected-dir-file \
-ii-0023-test \
+\
 ii-0024-input-dir-file \
 ii-0024-input-info-file \
 ii-0024-expected-dir-file \
-ii-0024-test \
+\
 ii-0025-input-dir-file \
 ii-0025-input-info-file \
 ii-0025-expected-dir-file \
-ii-0025-test \
+\
 ii-0026-input-dir-file \
 ii-0026-input-info-file \
 ii-0026-expected-dir-file \
-ii-0026-test \
+\
 ii-0027-input-dir-file \
 ii-0027-input-info-file \
 ii-0027-expected-dir-file \
-ii-0027-test \
+\
 ii-0028-input-dir-file \
 ii-0028-input-info-file \
 ii-0028-expected-dir-file \
-ii-0028-test \
+\
 ii-0029-input-dir-file \
 ii-0029-input-info-file \
 ii-0029-expected-dir-file \
-ii-0029-test \
+\
 ii-0030-input-dir-file \
 ii-0030-input-info-file \
 ii-0030-expected-dir-file \
-ii-0030-test \
+\
 ii-0031-input-dir-file \
 ii-0031-input-info-file \
 ii-0031-expected-dir-file \
-ii-0031-test \
+\
 ii-0032-input-dir-file \
 ii-0032-input-info-file \
 ii-0032-expected-dir-file \
-ii-0032-test \
+\
 ii-0033-input-dir-file \
 ii-0033-input-info-file \
 ii-0033-expected-dir-file \
-ii-0033-test \
+\
 ii-0034-input-dir-file \
 ii-0034-input-info-file \
 ii-0034-expected-dir-file \
-ii-0034-test \
+\
 ii-0035-input-dir-file \
 ii-0035-input-info-file \
 ii-0035-expected-dir-file \
-ii-0035-test \
+\
 ii-0036-input-dir-file \
 ii-0036-input-info-file \
 ii-0036-expected-dir-file \
-ii-0036-test \
+\
 ii-0037-input-dir-file \
 ii-0037-input-info-file \
 ii-0037-expected-dir-file \
-ii-0037-test \
+\
 ii-0038-input-dir-file \
 ii-0038-input-info-file \
 ii-0038-expected-dir-file \
-ii-0038-test \
+\
 ii-0039-input-dir-file \
 ii-0039-input-info-file \
 ii-0039-expected-dir-file \
-ii-0039-test \
+\
 ii-0040-input-dir-file \
 ii-0040-input-info-file \
 ii-0040-expected-dir-file \
-ii-0040-test \
+\
 ii-0041-input-dir-file.gz \
 ii-0041-input-info-file \
 ii-0041-expected-dir-file.gz \
-ii-0041-test \
+\
 ii-0042-input-dir-file \
 ii-0042-input-info-file \
 ii-0042-expected-dir-file \
-ii-0042-test \
+\
 ii-0043-input-dir-file \
 ii-0043-input-info-file \
 ii-0043-expected-dir-file \
-ii-0043-test \
+\
 ii-0044-input-dir-file \
 ii-0044-input-info-file \
 ii-0044-expected-dir-file \
-ii-0044-test \
+\
 ii-0045-input-dir-file \
 ii-0045-input-info-file \
 ii-0045-expected-dir-file \
-ii-0045-test \
+\
 ii-0046-input-dir-file \
 ii-0046-expected-dir-file \
-ii-0046-test \
+\
 ii-0047-input-dir-file \
 ii-0047-input-info-file \
 ii-0047-expected-dir-file \
-ii-0047-test \
+\
 ii-0048-input-dir-file \
 ii-0048-input-info-file \
 ii-0048-expected-dir-file \
-ii-0048-test \
+\
 ii-0049-input-dir-file \
 ii-0049-input-info-file \
 ii-0049-expected-dir-file \
-ii-0049-test \
+\
 ii-0050-input-dir-file.gz \
 ii-0050-input-info-file \
 ii-0050-expected-dir-file.gz \
-ii-0050-test \
+\
 ii-0051-input-dir-file \
 ii-0051-input-info-file \
 ii-0051-expected-dir-file \
-ii-0051-test \
+\
 ii-0052-input-dir-file \
 ii-0052-input-info-file \
 ii-0052-expected-dir-file \
-ii-0052-test \
+\
 ii-0053-input-dir-file \
 ii-0053-input-info-file \
 ii-0053-expected-dir-file \
-ii-0053-test \
+\
 ii-0054-input-dir-file \
 ii-0054-input-info-file.gz \
 ii-0054-expected-dir-file \
-ii-0055-test \
+\
 ii-0055-input-dir-file \
 ii-0055-input-info-file \
 ii-0055-expected-dir-file \
-ii-0055-test \
+\
 ii-0056-input-dir-file \
 ii-0056-input-info-file \
 ii-0056-expected-dir-file \
-ii-0057-test \
+\
 ii-0057-input-dir-file \
 ii-0057-input-info-file \
 ii-0057-expected-dir-file \
-ii-0057-test \
+\
 README
