@@ -329,6 +329,7 @@ t/results/converters_tests/at_commands_in_refs_latin1/res_html/cite-asis-in-_004
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/e-e-e-e-e-j-ee.html
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/env-code-option-samp-command-file-C_002dx-ESC.html
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/f_002d_002dile1-f_002d_002dile.html
+t/results/converters_tests/at_commands_in_refs_latin1/res_html/gH-3rd.html
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/http_003a_002f_002fsomewhere_005faaa-url-_002fman_002ecgi_002f1_002fls.html
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/i-E-C.html
 t/results/converters_tests/at_commands_in_refs_latin1/res_html/index.html
@@ -358,6 +359,7 @@ t/results/converters_tests/at_commands_in_refs_utf8/res_html/cite-asis-in-_0040w
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/e-e-e-e-e-j-ee.html
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/env-code-option-samp-command-file-C_002dx-ESC.html
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/f_002d_002dile1-f_002d_002dile.html
+t/results/converters_tests/at_commands_in_refs_utf8/res_html/gH-3rd.html
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/http_003a_002f_002fsomewhere_005faaa-url-_002fman_002ecgi_002f1_002fls.html
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/i-E-C.html
 t/results/converters_tests/at_commands_in_refs_utf8/res_html/index.html
@@ -481,6 +483,7 @@ t/results/coverage/not_i_j_in_dotless.pl
 t/results/coverage/preformatted.pl
 t/results/coverage/punctuation_in_line_commands.pl
 t/results/coverage/quotation_author.pl
+t/results/coverage/raggedright.pl
 t/results/coverage/setfilename_in_paragraph.pl
 t/results/coverage/spaces_after_braced_command.pl
 t/results/coverage/spaces_no_brace_after_braced_command.pl
@@ -611,6 +614,11 @@ t/results/html_tests/index_and_node_same_name.pl
 t/results/html_tests/index_below.pl
 t/results/html_tests/no_use_iso.pl
 t/results/html_tests/raw_html.pl
+t/results/html_tests/redirection_same_labels.pl
+t/results/html_tests/redirection_same_labels/res_html/circumflex.html
+t/results/html_tests/redirection_same_labels/res_html/i.html
+t/results/html_tests/redirection_same_labels/res_html/index.html
+t/results/html_tests/redirection_same_labels/res_html/umlaut.html
 t/results/html_tests/ref_in_preformatted.pl
 t/results/html_tests/shortcontents_no_top.pl
 t/results/html_tests/simple_menu.pl
