@@ -1,3 +1,12 @@
+2015-01-14  Karl Berry  <karl@gnu.org>
+
+	* texindex/Makefile.am,
+	* info/Makefile.am,
+	* install-info/tests/Makefile.am (EXTRA_DIST): new files needed,
+	found by make distcheck.
+	
+	* tp/MANIFEST: regenerate.
+
 2015-01-14  Arnold D. Robbins <arnold@skeeve.com>
 
 	* texindex/jrtangle: Fixes to allow non-use of default update recipe.
